compiler/typ/tests/fixtures/diagnostics/0750_fcm_hidden_value_to_int_consumer_09.ml.infer.expected
File "0750_fcm_hidden_value_to_int_consumer_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0750_fcm_hidden_value_to_int_consumer_09 is not a valid module name.

File "0750_fcm_hidden_value_to_int_consumer_09.ml", line 10, characters 19-26:
10 |   consume_int_iota M.value
                        ^^^^^^^
Error: The value M.value has type M.t but an expression was expected of type
         int
